# build_tools

./: .bazelignore  .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE.bazel
bcr_boost_manifest/: BUILD.bazel  README.md  boost_1_88_0_copy_existing_files.py  boost_dependencies.py  boost_downloader.py  boost_markdown_generator.py  generate_bcr_modules.py  generate_bcr_modules_test.py
bcrupdate/: BUILD.bazel  README.md  base64.cpp  command_line_arguments.cpp  command_line_arguments.h  curl_wrapper.h  filesystem.cpp  filesystem.h  filesystem_test.cpp  git_client.cpp  git_client.h  github_api.cpp  github_api.h  main.cpp  semver.hpp  string.cpp  string.h  testbed.cpp
bcrupdate/index_registry/module/: BUILD.bazel  metadata.h  metadata_io.cpp  metadata_io.h  metadata_io_test.cpp
bcrupdate/modules/catch2/: MODULE.bazel  source.json
bcrupdate/modules/catch2/patches/: module_dot_bazel.patch
bcrupdate/modules/embree/: MODULE.bazel  source.json
bcrupdate/modules/embree/patches/: module_dot_bazel.patch
bcrupdate/modules/glm/: MODULE.bazel  source.json
bcrupdate/modules/glm/patches/: add_module_dot_bazel.patch
bcrupdate/modules/glog/: MODULE.bazel  source.json
bcrupdate/modules/imath/: MODULE.bazel  source.json
bcrupdate/modules/imath/patches/: add_build_file.patch  module_dot_bazel.patch
bcrupdate/modules/libdeflate/: MODULE.bazel  source.json
bcrupdate/modules/libdeflate/patches/: module_dot_bazel.patch
bcrupdate/modules/libpng/: MODULE.bazel  presubmit.yml  source.json
bcrupdate/modules/libpng/patches/: module_dot_bazel.patch
bcrupdate/modules/libwebp/: MODULE.bazel  source.json
bcrupdate/modules/libwebp/patches/: module_dot_bazel.patch
bcrupdate/modules/nanoflann/: MODULE.bazel  source.json
bcrupdate/modules/nanoflann/patches/: module_dot_bazel.patch
bcrupdate/modules/onetbb/: MODULE.bazel  source.json
bcrupdate/modules/openexr/: MODULE.bazel  source.json
bcrupdate/modules/openexr/patches/: module_dot_bazel.patch
bcrupdate/modules/zlib/: MODULE.bazel  source.json
bcrupdate/modules/zlib/patches/: module_dot_bazel.patch
bzlinit/: BUILD.bazel  README.md  command_line_arguments.cpp  command_line_arguments.h  main.cpp
bzlinit/copts/: configure_copts.bzl
